--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,6 @@
+:root {
+  --primary-color: #d33536;
+}
 html,
 body {
   max-width: 100vw;
@@ -8,4 +11,13 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  --swiper-theme-color: var(--primary-color) !important;
+}
+
+.swiper-pagination-bullet-active {
+  --swiper-theme-color: var(--primary-color) !important;
 }
